--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </section>
         <footer>
-             <div class="center">
+             <div class="copyright">
               Copyright &copy; All rights reserved!!
              </div>
          </footer>
