--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is Harsh Dhama's Portfolio">
-    <title>Portfolio</title>
+    <title>Harsh Dhama's Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Bree+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <body>
@@ -23,15 +23,15 @@
     <section class="image">
         <div>
         <img src="https://media-exp1.licdn.com/dms/image/C4D03AQG6t8VX7o6gRw/profile-displayphoto-shrink_800_800/0/1660825998266?e=1671062400&v=beta&t=7lXXW-RDH0vA3DqMI_Q4YYsmINsUK_eGaeJcDUxMrkk" alt="Harsh Dhama"></div>
-        </section>
+    </section>
     <section class="about">
         <h1 id="abouts">ABOUT ME</h1>
         <p class="abouts">I belong to Meerut,Uttar Pradesh . Currently I'm persuing my B.Tech from Ajay Kumar Garg
             Engineering College ,Ghaziabad, Uttar Pradesh and I'm a Dayscholar. I'm a student of second year in
             CSE(Computer Science And Engineering) branch. My academic Session is 2021-2025. I have done my primary
-            schooling from IIMT ACADEMY, Meerut. I'm making this portfolio website as a first project of my probation period in a well-known society of my college, BRL in which I'm
+            schooling from IIMT ACADEMY, Meerut. I'm making this portfolio website as a first project of my probation period in a well-known society of my college, BRL(Blockchain and Research Lab) in which I'm
             selected as a trainee. I hope this project would be liked by my seniors.😊</p>
-        </section>
+    </section>   
     <section>
         <h1 id="skills">SKILLS</h1>
         <div id="skill">
@@ -76,5 +76,5 @@
               Copyright &copy; All rights reserved!!
              </div>
          </footer>
-     </body>
+    </body>
 </html>
