--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="message">
-            <form>
+            <form action="https://formsubmit.co/04eae0e63b4e7825eb4859a74c366947" method="POST">
                 <input type="text"placeholder="Enter your name">
                 <input type="text"placeholder="Enter your Email">
                 <input type ="text" placeholder="Enter your message">
@@ -74,6 +74,7 @@
         <footer>
              <div class="copyright">
               Copyright &copy; All rights reserved!!
+              <a href="https://wa.me/8077511218" target="_blank">Whatsapp</a>
              </div>
          </footer>
     </body>
