--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="message">
-            <form action="https://formsubmit.co/04eae0e63b4e7825eb4859a74c366947" method="POST">
+            <form action="mailto:dhamaharsh9@gmail.com">
                 <input type="text"placeholder="Enter your name">
                 <input type="text"placeholder="Enter your Email">
                 <input type ="text" placeholder="Enter your message">
