--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <p class="abouts">I belong to Meerut,Uttar Pradesh . Currently I'm persuing my B.Tech from Ajay Kumar Garg
             Engineering College ,Ghaziabad, Uttar Pradesh and I'm a Dayscholar. I'm a student of second year in
             CSE(Computer Science And Engineering) branch. My academic Session is 2021-2025. I have done my primary
-            schooling from IIMT ACADEMY, Meerut. I'm making this portfolio website as a first project of my probation period in a well-known society of my college, BRL(Blockchain and Research Lab) in which I'm
+            schooling from IIMT ACADEMY, Meerut.<br>
+            I'm making this portfolio website as a first project of my probation period in a well-known society of my college, BRL(Blockchain and Research Lab) in which I'm
             selected as a trainee. I hope this project would be liked by my seniors.😊</p>
     </section>   
     <section>
