--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </section>
         <footer>
              <div class="copyright">
-              Copyright &copy; All rights reserved!!
+              Copyright &copy; All rights reserved!!!
              </div>
          </footer>
     </body>
