--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="https://www.seekpng.com/png/detail/111-1112824_picture-my-portfolio-logo-png.png">
         </div>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#abouts">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contacts">Contact</a></li>
