--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="about">
         <h1 id="abouts">ABOUT ME</h1>
         <p class="abouts">I belong to Meerut,Uttar Pradesh . Currently I'm persuing my B.Tech from Ajay Kumar Garg
-            Engineering College ,Ghaziabad, Uttar Pradesh and I'm a Dayscholar. I'm a student of second year in
+            Engineering College ,Ghaziabad, Uttar Pradesh and I'm a Dayscholar. <br>00I'm a student of second year in
             CSE(Computer Science And Engineering) branch. My academic Session is 2021-2025. I have done my primary
             schooling from IIMT ACADEMY, Meerut.<br>
             I'm making this portfolio website as a first project of my probation period in a well-known society of my college, BRL(Blockchain and Research Lab) in which I'm
@@ -64,6 +64,9 @@
             </div>
             <div class="boxes">
             <a href="https://wa.me/8077511218" target="_blank"><img src="https://i.pinimg.com/736x/22/1e/1d/221e1d2f1a2325f074ce4b34eb5b4d16.jpg"></a>
+            </div>
+            <div class="boxes">
+            <a href="https://www.linkedin.com/in/harsh-dhama-06a5921aa/" target="_blank"><img src="https://th.bing.com/th/id/OIP.guewxxO1KBiFs_CI_ltSQgEsEs?pid=ImgDet&w=512&h=512&rs=1"></a>
             </div>
         </div>
         <div class="message">
