--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <section class="contact">
         <h1 id="contacts">CONTACT ME</h1>
         <div id="cont">
-            <div class="boxes">
+            <!-- <div class="boxes">
                 <a href="https://www.instagram.com/_dhama_ji/" target="_blank"><img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-black-and-white-logos/1000/2018_social_media_popular_app_logo_instagram-1024.png"></a>
-            </div>
+            </div> -->
             <div class="boxes">
                 <a href="https://twitter.com/DhamajiHarsh" target="_blank"><img src="https://icon-library.com/images/black-and-white-twitter-icon/black-and-white-twitter-icon-11.jpg"></a>
             </div>
