--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                 </div>
         </div>
         <div class="message">
-            <form action="mailto:dhamaharsh9@gmail.com">
-                <input type="text"placeholder="Enter your name">
-                <input type="text"placeholder="Enter your Email">
-                <input type ="text" placeholder="Enter your message">
+            <form action="mailto:dhamaharsh9@gmail.com" method="post">
+                <input type="text" name="CompleteName" placeholder="Enter your name">
+                <!-- <input type="text" placeholder="Enter your Email"> -->
+                <input type ="text" name="message" placeholder="Enter your message">
                 <input type="submit" value="Submit">
                 <input type="reset" value="Reset">
             </form>
