--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
     <nav id="navbar">
         <div id="logo">
-        <img src="https://www.seekpng.com/png/detail/111-1112824_picture-my-portfolio-logo-png.png">
+        <img src="htt ps://www.seekpng.com/png/detail/111-1112824_picture-my-portfolio-logo-png.png">
         </div>
         <ul>
             <li><a href="#">Home</a></li>
@@ -22,7 +22,7 @@
     </nav>
     <section class="image">
         <div>
-        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQG6t8VX7o6gRw/profile-displayphoto-shrink_800_800/0/1660825998266?e=1671062400&v=beta&t=7lXXW-RDH0vA3DqMI_Q4YYsmINsUK_eGaeJcDUxMrkk" alt="Harsh Dhama"></div>
+        <img width="100" src="images/dhamaji.jpg" alt="Harsh Dhama's Image"></div>
     </section>
     <section class="about">
         <h1 id="abouts">ABOUT ME</h1>
@@ -53,9 +53,6 @@
     <section class="contact">
         <h1 id="contacts">CONTACT ME</h1>
         <div id="cont">
-            <!-- <div class="boxes">
-                <a href="https://www.instagram.com/_dhama_ji/" target="_blank"><img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-black-and-white-logos/1000/2018_social_media_popular_app_logo_instagram-1024.png"></a>
-            </div> -->
             <div class="boxes">
                 <a href="https://twitter.com/DhamajiHarsh" target="_blank"><img src="https://icon-library.com/images/black-and-white-twitter-icon/black-and-white-twitter-icon-11.jpg"></a>
             </div>
