--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
     <nav id="navbar">
         <div id="logo">
-        <img src="htt ps://www.seekpng.com/png/detail/111-1112824_picture-my-portfolio-logo-png.png">
+        <img src="images\portfolio.png">
         </div>
         <ul>
             <li><a href="#">Home</a></li>
